# llm_data_engineering

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
schemas/: t_r_customer_service_reporting.sql
src/: generate_dag_script.py  generate_documentation_script.py  generate_sql_script.py  test_jupyter.py
src/langchain/: database_query_example.py
